# htftp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  base_DOM.h.in  config.h  htftp.c  htftp.h  localws.c  localws.h  main.c  main_htftp.c  optconfig.cmake  server.c  weblocal.c
config/: config.h.in
include/: htftp.h  htftp_logprint.h
src/: htftp.c  htftp_logprint.c
